@@ -1,18 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<install version="1.6" type="plugin" group="search">
-	<name>Search - Sections</name>
-	<author>Joomla! Project</author>
-	<creationDate>November 2005</creationDate>
-	<copyright>Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.</copyright>
-	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
-	<authorEmail>admin@joomla.org</authorEmail>
-	<authorUrl>www.joomla.org</authorUrl>
-	<version>1.5</version>
-	<description>Allows Searching of Content Section information</description>
-	<files>
-		<filename plugin="sections">sections.php</filename>
-	</files>
-	<params>
-		<param name="search_limit" type="text" size="5" default="50" label="Search Limit" description="Number of Search items to return"/>
-	</params>
-</install>
